--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "farafina",
   "version": "0.1.0",
+  "homepage": "https://gitClems.github.io/farafina",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -14,6 +15,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-bootstrap-icons": "^1.10.3",
@@ -22,11 +24,13 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "sass": "^1.69.7",
+    "three": "^0.160.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
