--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "farafina",
   "version": "0.1.0",
-  "homepage": "https://farafina.onrender.com",
+  "homepage": "https://gitClems.github.io/farafina",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
