--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.8.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
